<resources>
    <string name="app_name">Partyplaner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- SigIn -->
    <string name="logo_fragment_discription">Papla Logo</string>
    <string name="signin_fragment_discription">Log In</string>
    <string name="signin_as_guest">Als Gast einloggen</string>
    <string name="signin">Anmelden</string>
    <string name="forgotPass">Passwort vergessen?</string>
    <string name="register">Registrieren</string>
    <string name="pw">Password</string>
    <string name="pwWdhg">Password wiederholen</string>
    <string name="username">Benutzername</string>
    <string name="email">E-Mail</string>

    <!--TODOFragmentTODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="betreff">Betreff :</string>
    <string name="e_mail_wiederholen">E-Mail wiederholen :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="ihre_anfrage">Ihre Anfrage</string>
    <string name="senden">Senden</string>
    <string name="vorname">Name :</string>
    <string name="telefon">Telefon :</string>
    <string name="nachname">Nachname :</string>
    <string name="adresse">Adresse :</string>
    <string name="geb_datum">Geb-Datum :</string>
    <string name="profildaten_erstellen">Profildaten erstellen</string>
    <string name="nutzer_löschen">Nutzer löschen</string>
    <string name="vergangene_veranstaltung">Vergangene Veranstaltung</string>
    <string name="zukünftige_veranstaltung">Zukünftige Veranstaltung</string>
    <string name="gaeste">Gäste</string>
    <string name="name">Name</string>
    <string name="admin">Admin</string>
    <string name="emptyList">Liste leer</string>
    <string name="kontakt_suchen">Kontakt suchen</string>
    <string name="kontakte_durchsuchen">Kontakte durchsuchen</string>
    <string name="todo">TODO</string>

    <string name="gender">Gender :</string>

    <!-- Poll -->
    <string name="poll_label_create">Neue Abstimmung erstellen</string>
    <string name="poll_label_poll">Abstimmen</string>o
...
