...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/event_what"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/event_who"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/event_where"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/event_when"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/placeholder"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/placeholder"
                android:textColor="@android:color/black"
...
                android:layout_height="20dp"
                android:text="@string/more"
                android:textAlignment="textEnd"
                android:textColor="@color/blue" />

            <LinearLayout
                android:id="@+id/eventBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </ScrollView>
...
