<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expand_back"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color_gradient">

        <ImageView
            android:id="@+id/arrow"
...
            android:contentDescription="@string/arrow"
            android:padding="16dp"
            android:rotation="0"
            app:srcCompat="@drawable/arrow_icon" />

        <TextView
            android:id="@+id/expandableTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/arrow"
...
